--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,6 +15,45 @@
 }
 
 
+/* Lodur Form Elements Start **************************************************/
+
+.lodurMobile-form input[type=text], .lodurMobile-form input[type=date], .lodurMobile-form input[type=time], .lodurMobile-form select{
+  padding: 0.4rem 0.3rem;
+  border-radius: 0.25rem;
+  border: 1px solid #dadada;
+  background-color: #ffffff;
+  font-size: 0.875rem;
+  margin-top: 0.150rem;
+  width: 100%;
+  margin-bottom: 10px;
+  height: 36px;
+}
+
+.lodurMobile-form textarea{
+padding: 0.4rem 0.3rem;
+border-radius: 0.25rem;
+border: 1px solid #dadada;
+background-color: #ffffff;
+font-size: 0.875rem;
+margin-top: 0.150rem;
+width: 100%;
+margin-bottom: 10px;
+}
+
+.lodurMobile-form label{
+  font-size: 12px;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+}
+
+.lodurMobile-form--datePicker, .lodurMobile-form--timePicker{
+  position: absolute;
+  right: 15px;
+  bottom: 20px;
+}
+
+
 
 // App Styles Start
 
@@ -23,6 +62,10 @@ body {
 }
 .homepageModule-wrapper {
   max-width: 100%;
+  .lodur-blue--button{
+    background-color: #0d9ed6;
+    color: #fff;
+  }
 	span.lodur-icon-arrow-thin-left {
 		font-size: 30px;
 		color: #a4a4a4;
@@ -267,20 +310,30 @@ body {
   }
 
   .hpm-edit--panel{
-    padding: 30px 25px;
+    padding: 30px 0;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.24);
     background-color: #ffffff;
     position: fixed;
     width: 20%;
     height: 93vh;
-    margin: 30px 0 0 0;
+    margin: 30px 0 0 15px;
     h2{
       font-size: 16px;
       font-weight: bold;
-      margin: 0 0 30px 0;
+      margin: 0 0 6px;
+    }
+    p.hpm--subHeadline{
+      font-size: 14px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.4;
+      letter-spacing: normal;
+      text-align: left;
+      color: #707070;
     }
     .hpm-colorSelection{
-      padding: 0 0 25px;
+      padding: 0 25px 25px;
       margin: 0 0 40px;
       // border-bottom: 1px solid #DEDEDE;
       ul {
@@ -315,7 +368,7 @@ body {
             a{
               span{
                 border: solid 3px #ffffff;
-                background-color: #e94c3d;
+                
                 box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.38);
               }
             }
@@ -324,6 +377,8 @@ body {
       } 
     }
     .hpm-uploadLogo{
+      padding: 0 25px;
+      
       .hpm--uploader{
         font-size: 14px;
         
@@ -347,9 +402,146 @@ body {
         }
       }
     }
+    .hpm-headerImage{
+      padding: 0 25px;
+      ul{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        li{
+          border-bottom: 3px solid #E8EBF2;
+          float: left;
+          list-style-type: none;
+          width: 50%;
+          text-align: center;
+          &.selected{
+            border-bottom: 3px solid #0055FF;
+          }
+          a{
+            display: block;
+            padding: 10px 0;
+            &:hover{
+              text-decoration: none;
+            }
+          }
+        }
+      }
+      .hpm--headerImage{
+        img{
+          object-fit: cover;
+          width: 100%;
+          height: 110px;
+        }
+      }
+    }
+    .hpm-stock-photos{
+      ul{
+        padding: 0;
+        margin: 30px 0 0;
+        float: left;
+        li{
+          display: inline-block;
+          margin: 0;
+          padding: 0 2px 2px 0;
+          border: none;
+          a{
+            padding: initial;
+            img{
+              object-fit: cover;
+              width: 100%;
+              height: 110px;
+            }
+          }
+        }
+      }
+    }
+    .hpm-navigationMenu{
+      padding: 0 25px;
+      ul{
+        margin: 0;
+        padding: 0;
+        li{
+          display: inline-block;
+          a{
+            display: block;
+            border: 3px solid #fff;
+            &.selected{
+              border: 3px solid #0055FF;
+              border-radius: 10px;
+            }
+          }
+        }
+      }
+      .hpm-menuSetting{
+        ul{
+          margin: 0;
+          padding: 0;
+          li{
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            div.hpm-Menu{
+              font-size: 14px;
+              background-color: #E6E6E6;
+              padding: 8px 15px;
+              display: flex;
+              margin: 0 0 3px;
+              align-items: center;
+              justify-content: space-between;
+              a{
+                border: initial;
+                
+                &:hover{
+                  text-decoration: none;
+                }
+              }
+              span{
+                font-size: 12px;
+                color: #a5a5a5;
+              }
+              ul{
+                padding: 0 0 0 30px;
+                li{
+  
+                }
+              }
+            }
+            .hpm-subMenu{
+              padding: 0 0 0 30px;
+            }
+          }
+        }
+      }
+    }
     .hpm-template--buttons{
       position: absolute;
       bottom: 0;
+      width: 100%;
+      background-color: #fff;
+      .hpm--statusBar{
+        background-color: #E9E9E9;
+        height: 3px;
+        margin-bottom: 15px;
+        .hpm--statusBar--complete{
+          background-color: #2baf6d;
+          width: 30%;
+          height: 3px;
+        }
+      }
+      .hpm-status--buttons{
+        display: flex;
+        justify-content: space-between;
+        padding: 0 25px 15px;
+        .hpm-statusInfo{
+          display: flex;
+          align-items: center;
+          font-size: 14px;
+        }
+        span.lodur-icon-arrow-thin-left{
+          color: #ffffff;
+          font-size: 28px;
+        }
+      }
     }
   }
   .hpm-templatePreview{
