--- a/css/styles.css
+++ b/css/styles.css
@@ -1112,11 +1112,11 @@ body {
           -webkit-transition: opacity 0.5s;
           opacity: 1; }
   .homepageModule-wrapper .hpm-edit--panel {
-    padding: 30px 0;
+    padding: 0;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.24);
     background-color: #ffffff;
     position: fixed;
-    width: 20%;
+    width: 400px;
     height: 93vh;
     margin: 30px 0 0 15px; }
     .homepageModule-wrapper .hpm-edit--panel h2 {
@@ -1132,6 +1132,11 @@ body {
       letter-spacing: normal;
       text-align: left;
       color: #707070; }
+    .homepageModule-wrapper .hpm-edit--panel .hpm-sidebar--scroller {
+      overflow: auto;
+      height: calc(100vh - 111px);
+      padding-bottom: 40px;
+      padding-top: 40px; }
     .homepageModule-wrapper .hpm-edit--panel .hpm-colorSelection {
       padding: 0 25px 25px;
       margin: 0 0 40px; }
@@ -1222,12 +1227,13 @@ body {
         margin: 0;
         padding: 0; }
         .homepageModule-wrapper .hpm-edit--panel .hpm-navigationMenu ul li {
-          display: inline-block; }
+          display: inline-block;
+          padding: 0 2px 0 0; }
           .homepageModule-wrapper .hpm-edit--panel .hpm-navigationMenu ul li a {
             display: block;
-            border: 3px solid #fff; }
+            border: 2px solid #fff; }
             .homepageModule-wrapper .hpm-edit--panel .hpm-navigationMenu ul li a.selected {
-              border: 3px solid #0055FF;
+              border: 2px solid #0055FF;
               border-radius: 10px; }
       .homepageModule-wrapper .hpm-edit--panel .hpm-navigationMenu .hpm-menuSetting ul {
         margin: 0;
@@ -1245,7 +1251,8 @@ body {
             align-items: center;
             justify-content: space-between; }
             .homepageModule-wrapper .hpm-edit--panel .hpm-navigationMenu .hpm-menuSetting ul li div.hpm-Menu a {
-              border: initial; }
+              border: initial;
+              color: #000; }
               .homepageModule-wrapper .hpm-edit--panel .hpm-navigationMenu .hpm-menuSetting ul li div.hpm-Menu a:hover {
                 text-decoration: none; }
             .homepageModule-wrapper .hpm-edit--panel .hpm-navigationMenu .hpm-menuSetting ul li div.hpm-Menu span {
@@ -1255,6 +1262,48 @@ body {
               padding: 0 0 0 30px; }
           .homepageModule-wrapper .hpm-edit--panel .hpm-navigationMenu .hpm-menuSetting ul li .hpm-subMenu {
             padding: 0 0 0 30px; }
+    .homepageModule-wrapper .hpm-edit--panel .hpm-select--font {
+      padding: 0 25px; }
+      .homepageModule-wrapper .hpm-edit--panel .hpm-select--font ul.hpm--font-selection {
+        margin: 0;
+        padding: 0; }
+        .homepageModule-wrapper .hpm-edit--panel .hpm-select--font ul.hpm--font-selection li {
+          list-style-type: none;
+          padding: 0 0 15px; }
+          .homepageModule-wrapper .hpm-edit--panel .hpm-select--font ul.hpm--font-selection li a {
+            display: block;
+            border: 2px solid #E4E4E4;
+            border-radius: 12px;
+            padding: 15px 25px 5px;
+            color: #000; }
+            .homepageModule-wrapper .hpm-edit--panel .hpm-select--font ul.hpm--font-selection li a:hover {
+              text-decoration: none; }
+            .homepageModule-wrapper .hpm-edit--panel .hpm-select--font ul.hpm--font-selection li a.selected {
+              border: 2px solid #0055FF; }
+            .homepageModule-wrapper .hpm-edit--panel .hpm-select--font ul.hpm--font-selection li a .hpm-demoText--heading {
+              font-size: 16px;
+              margin-bottom: 0.5rem; }
+            .homepageModule-wrapper .hpm-edit--panel .hpm-select--font ul.hpm--font-selection li a .hpm-demoText--body {
+              font-size: 14px; }
+    .homepageModule-wrapper .hpm-edit--panel .hpm-contactDetails {
+      padding: 0 25px; }
+      .homepageModule-wrapper .hpm-edit--panel .hpm-contactDetails ul {
+        margin: 0;
+        padding: 0;
+        width: 100%; }
+        .homepageModule-wrapper .hpm-edit--panel .hpm-contactDetails ul li {
+          border-bottom: 3px solid #E8EBF2;
+          float: left;
+          list-style-type: none;
+          width: 50%;
+          text-align: center; }
+          .homepageModule-wrapper .hpm-edit--panel .hpm-contactDetails ul li.selected {
+            border-bottom: 3px solid #0055FF; }
+          .homepageModule-wrapper .hpm-edit--panel .hpm-contactDetails ul li a {
+            display: block;
+            padding: 10px 0; }
+            .homepageModule-wrapper .hpm-edit--panel .hpm-contactDetails ul li a:hover {
+              text-decoration: none; }
     .homepageModule-wrapper .hpm-edit--panel .hpm-template--buttons {
       position: absolute;
       bottom: 0;
@@ -1280,7 +1329,8 @@ body {
           color: #ffffff;
           font-size: 28px; }
   .homepageModule-wrapper .hpm-templatePreview {
-    padding: 0 30px 0 0; }
+    padding: 0 15px 0 0;
+    padding-left: 445px; }
     .homepageModule-wrapper .hpm-templatePreview img {
       object-fit: contain;
       width: 100%; }
