--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -310,11 +310,11 @@ body {
   }
 
   .hpm-edit--panel{
-    padding: 30px 0;
+    padding: 0;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.24);
     background-color: #ffffff;
     position: fixed;
-    width: 20%;
+    width: 400px;
     height: 93vh;
     margin: 30px 0 0 15px;
     h2{
@@ -331,6 +331,9 @@ body {
       letter-spacing: normal;
       text-align: left;
       color: #707070;
+    }
+    .hpm-sidebar--scroller{
+      @include hpm-sidebar--scroller;
     }
     .hpm-colorSelection{
       padding: 0 25px 25px;
@@ -462,11 +465,12 @@ body {
         padding: 0;
         li{
           display: inline-block;
+          padding: 0 2px 0 0;
           a{
             display: block;
-            border: 3px solid #fff;
+            border: 2px solid #fff;
             &.selected{
-              border: 3px solid #0055FF;
+              border: 2px solid #0055FF;
               border-radius: 10px;
             }
           }
@@ -490,6 +494,7 @@ body {
               justify-content: space-between;
               a{
                 border: initial;
+                color: #000;
                 
                 &:hover{
                   text-decoration: none;
@@ -512,6 +517,63 @@ body {
           }
         }
       }
+    }
+    .hpm-select--font{
+      padding: 0 25px;
+      ul.hpm--font-selection{
+        margin: 0;
+        padding: 0;
+        li{
+          list-style-type: none;
+          padding: 0 0 15px;
+          a{
+            display: block;
+            border: 2px solid #E4E4E4;
+            border-radius: 12px;
+            padding: 15px 25px 5px;
+            color: #000;
+            &:hover{
+              text-decoration: none;
+            }
+            &.selected{
+              border: 2px solid #0055FF;
+            }
+            .hpm-demoText--heading{
+              font-size: 16px;
+              margin-bottom: 0.5rem;
+            }
+            .hpm-demoText--body{
+              font-size: 14px;
+            }
+          }
+        }
+      }
+    }
+    .hpm-contactDetails{
+      padding: 0 25px;
+      ul{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        li{
+          border-bottom: 3px solid #E8EBF2;
+          float: left;
+          list-style-type: none;
+          width: 50%;
+          text-align: center;
+          &.selected{
+            border-bottom: 3px solid #0055FF;
+          }
+          a{
+            display: block;
+            padding: 10px 0;
+            &:hover{
+              text-decoration: none;
+            }
+          }
+        }
+      }
+      
     }
     .hpm-template--buttons{
       position: absolute;
@@ -545,7 +607,8 @@ body {
     }
   }
   .hpm-templatePreview{
-    padding: 0 30px 0 0;
+    padding: 0 15px 0 0;
+    padding-left: 445px;
     img{
       object-fit: contain;
       width: 100%;
