--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -8,3 +8,10 @@
     padding-bottom: 40px;
     padding-top: 40px;
 }
+
+@mixin edit-section--spacing{
+    padding: 0 25px 25px;
+    margin: 0 0 40px;
+    border-bottom: 1px solid #DEDEDE;
+}
+
